# AoCSolver

./: .gitignore  CMakeLists.txt  Dockerfile
.devcontainer/: Dockerfile  devcontainer.json
configuration/2021/day1/: configuration_file.json
configuration/2021/day2/: configuration_file.json
configuration/2021/day3/: configuration_file.json
configuration/2024/day1/: configuration_file.json
configuration/2024/day10/: configuration_file.json
configuration/2024/day11/: configuration_file.json
configuration/2024/day12/: configuration_file.json
configuration/2024/day13/: configuration_file.json
src/: AOCSolverCommon.hpp  AoCSolverCommon.cpp  AoCSolverCommon.hpp  CMakeLists.txt  ISolver.hpp  SolverFactory.cpp  SolverFactory.hpp  main.cpp
src/2021/: CMakeLists.txt  Day1Solver.cpp  Day1Solver.hpp  Day2Solver.cpp  Day2Solver.hpp  Day3Solver.cpp  Day3Solver.hpp
src/2024/: CMakeLists.txt  Day10Solver.cpp  Day10Solver.hpp  Day11Solver.cpp  Day11Solver.hpp  Day12Solver.cpp  Day12Solver.hpp  Day13Solver.cpp  Day13Solver.hpp  Day14Solver.cpp  Day14Solver.hpp  Day15Solver.cpp  Day15Solver.hpp  Day16Solver.cpp  Day16Solver.hpp  Day1Solver.cpp  Day1Solver.hpp  Day2Solver.cpp  Day2Solver.hpp  Day3Solver.cpp  Day3Solver.hpp  Day4Solver.cpp  Day4Solver.hpp  Day5Solver.cpp  Day5Solver.hpp  Day6Solver.cpp  Day6Solver.hpp  Day7Solver.cpp  Day7Solver.hpp  Day8Solver.cpp  Day8Solver.hpp  Day9Solver.cpp  Day9Solver.hpp
src/2025/: CMakeLists.txt  Day1Solver.cpp  Day1Solver.hpp  Day2Solver.cpp  Day2Solver.hpp  Day3Solver.cpp  Day3Solver.hpp  Day4Solver.cpp  Day4Solver.hpp
(+15 files in other folders)
